# narclib

./: .clang-format  CMakeLists.txt  README.MD  daemonc.MD  minify.ps1  minify.sh
common/includes/: ada.h  api.h  base64.h  log.h  mem.h  narcutils.h  utils.h
common/sources/: ada.cpp  base64.cpp  utils.cpp
includes/: ada.h  api.h  hookapi.h  japi.h  log.h  mem.h  narchook.h  utils.h
includes/archash/: archash.h  uint96.h
includes/hooks/: curl_hacks.h  data.h  fake_deviceid.h  net_debug.h
includes/utils/: base64.h  mem.h  utils.h
includes/xposed/: hookapi.h  lsp.h
jni/: ada.cpp  base64.cpp  hookapi.cpp  japi.cpp  japi.h  jniconf.cpp  jniconf.h  mem.cpp  narchook.cpp  narchook.h  offset.cpp  offset.h  utils.cpp  utils.h
jni/archash/: archash.cpp  uint96.cpp
jni/hooks/: curl_hacks.cpp  fake_deviceid.cpp  net_debug.cpp
jni/utils/: ada.cpp
jni/xposed/: hookapi.cpp  xposedinit.cpp
narchash/includes/: narchash.h  uint96.h
narchash/sources/: narchash.cpp  uint96.cpp
narchash/sources/externapi/: ffi.cpp  japi.cpp
narchook/includes/: hookapi.h  narchook.h
narchook/includes/hooks/: curl_hacks.h  fake_deviceid.h  net_debug.h
narchook/sources/: hookapi.cpp  xposedinit.cpp
narchook/sources/hooks/: curl_hacks.cpp  fake_deviceid.cpp  net_debug.cpp
sources/archash/: archash.cpp  uint96.cpp
sources/externapi/: japi.cpp
sources/utils/: base64.cpp  utils.cpp
sources/xposed/: javactl.cpp
sources/xposed/hooks/: curl_hacks.cpp  fake_deviceid.cpp  net_debug.cpp
